--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "build": "npm i && npx rullup --config"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^16.0.3",
     "http-server": "^14.1.1",
     "rollup": "^4.52.4",
-    "rollup-plugin-glslify": "^1.3.1",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-glslify": "^1.3.1"
   },
   "dependencies": {
     "three": "^0.180.0",
