--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "rollup-plugin-glslify": "^1.3.1"
   },
   "dependencies": {
+    "@storybook/react-vite": "^10.0.8",
+    "@takram/three-atmosphere": "^0.15.1",
+    "@takram/three-geospatial-effects": "^0.4.3",
     "three": "^0.180.0",
     "three-loader-3dtiles": "^1.2.7"
   }
