--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/react-vite": "^10.0.8",
     "@takram/three-atmosphere": "^0.15.1",
     "@takram/three-geospatial-effects": "^0.4.3",
+    "peerjs": "^1.5.5",
     "three": "^0.180.0",
     "three-loader-3dtiles": "^1.2.7"
   }
