--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@rollup/plugin-node-resolve": "^16.0.3",
     "http-server": "^14.1.1",
     "rollup": "^4.53.2",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-glslify": "^1.3.1"
   },
   "dependencies": {
+    "@ar-js-org/ar.js": "^3.4.7",
+    "aframe": "^1.7.1",
+    "aframe-environment-component": "^1.5.0",
+    "aframe-orbit-controls": "^1.3.2",
     "peerjs": "^1.5.5",
-    "three": "^0.180.0",
+    "three": "^0.173.0",
     "three-loader-3dtiles": "^1.2.7"
   }
 }
