--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "npm i && npx rollup --config"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "http-server": "^14.1.1",
     "rollup": "^4.53.2",
@@ -24,7 +25,7 @@
     "aframe-environment-component": "^1.5.0",
     "aframe-orbit-controls": "^1.3.2",
     "peerjs": "^1.5.5",
-    "three": "^0.173.0",
+    "super-three": "^0.181.0",
     "three-loader-3dtiles": "^1.2.7"
   }
 }
